src/objects/Offer_Incentive_Valid_Date__c.object
<CustomObject>
    <description>Offer Incentive Valid Date</description>
    <fields>
        <fullName>Offer_Incentive__c</fullName>
        <description>Offer Incentive lookup</description>
        <inlineHelpText>Offer Incentive lookup</inlineHelpText>
        <label>Offer Incentive</label>
        <referenceTo>Offer_Incentive__c</referenceTo>
        <relationshipLabel>Offer Incentive Valid Dates</relationshipLabel>
        <relationshipName>Offer_Incentive_Valid_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valid_Date__c</fullName>
        <description>Offer Valid Date</description>
        <inlineHelpText>Offer Valid Date</inlineHelpText>
        <label>Valid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_End_Hour__c</fullName>
        <description>Valid End Hour</description>
        <globalPicklist>Hour</globalPicklist>
        <inlineHelpText>Valid End Hour</inlineHelpText>
        <label>Valid End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_End_Minute__c</fullName>
        <description>Valid End Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Valid End Minute</inlineHelpText>
        <label>Valid End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Hour__c</fullName>
        <description>Valid Start Hour</description>
        <globalPicklist>Hour</globalPicklist>
        <inlineHelpText>Valid Start Hour</inlineHelpText>
        <label>Valid Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Minute__c</fullName>
        <description>Valid Start Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Valid Start Minute</inlineHelpText>
        <label>Valid Start Minute</label>
        <type>Picklist</type>
    </fields>
    <label>Offer Incentive Valid Date</label>
    <nameField>
        <displayFormat>OID-{0000000000}</displayFormat>
        <label>Offer Incentive Valid Date Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Valid Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>